fixing the imji picker distortion to the ui

--- a/Ai Chat Bot/src/Components/ChatBotApp.css
+++ b/Ai Chat Bot/src/Components/ChatBotApp.css
@@ -155,6 +155,7 @@
     margin-bottom: -7rem;
 }
 
+
 .msg-form{
     width: 100%;
     height: 10rem;
@@ -163,6 +164,13 @@
     align-items: center;
     box-shadow: 0 -2rem .5rem rgba(0,0,0,.1);
     padding: 5rem;
+    position: relative;
+}
+
+.picker{
+    position: absolute;
+    bottom: 7rem;
+    left: 8rem;
 }
 
 .msg-form i{
